# internal/module/logquery/handler.go
@@ -51,6 +51,9 @@ func (h *Handler) ListLogs(c *gin.Context, params apigen.ListLogsParams) {
 	if params.Action != nil {
 		f.Action = string(*params.Action)
 	}
+	if params.AnswerIp != nil {
+		f.AnswerIP = string(*params.AnswerIp)
+	}
 	if params.OrgId != nil {
 		f.OrgID = params.OrgId.String()
 	}
@@ -156,6 +159,9 @@ func (h *Handler) ExportLogs(c *gin.Context, params apigen.ExportLogsParams) {
 	}
 	if params.Action != nil {
 		f.Action = string(*params.Action)
+	}
+	if params.AnswerIp != nil {
+		f.AnswerIP = string(*params.AnswerIp)
 	}
 	if params.OrgId != nil {
 		f.OrgID = params.OrgId.String()
